--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "express": "^4.17.1",
     "node-fetch": "^3.0.0-beta.9",
     "nodemailer": "^6.4.11",
+    "pg": "^8.3.3",
+    "pg-hstore": "^2.3.3",
     "promise.allsettled": "^1.0.2",
     "sequelize": "^6.3.5",
     "sqlite3": "^5.0.0",
+    "unique-push-id": "^1.0.2",
     "xlsx": "^0.16.7",
     "xml-stream": "^0.4.5"
   },
