--- a/package.json
+++ b/package.json
@@ -4,32 +4,29 @@
   "description": "Un bot para el servidor de Discord del canal Dia de la Toalla",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node bot.js"
   },
   "author": "Pablo Ariel Mayobre <pablo.a.mayobre@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "discord.js": "^12.3.1",
-    "email-validator": "^2.0.4",
-    "express": "^4.17.1",
-    "node-fetch": "^3.0.0-beta.9",
-    "nodemailer": "^6.4.11",
-    "pg": "^8.3.3",
-    "pg-hstore": "^2.3.3",
-    "promise.allsettled": "^1.0.2",
-    "sequelize": "^6.3.5",
-    "sqlite3": "^5.0.0",
-    "unique-push-id": "^1.0.2",
-    "xlsx": "^0.16.7",
-    "xml-stream": "^0.4.5"
+    "discord.js": "12.3.1",
+    "email-validator": "2.0.4",
+    "node-fetch": "3.0.0-beta.9",
+    "pg": "8.3.3",
+    "pg-hstore": "2.3.3",
+    "promise.allsettled": "1.0.2",
+    "sequelize": "6.3.5",
+    "unique-push-id": "1.0.2",
+    "xlsx": "0.16.7"
   },
   "devDependencies": {
-    "@types/express": "^4.17.7",
-    "@types/node": "^14.6.0",
-    "@types/nodemailer": "^6.4.0",
-    "@types/promise.allsettled": "^1.0.3",
-    "@types/sqlite3": "^3.1.6",
-    "@types/validator": "^13.1.0",
+    "@types/node": "14.6.0",
+    "@types/promise.allsettled": "1.0.3",
+    "@types/sqlite3": "3.1.6",
+    "@types/validator": "13.1.0",
     "@types/xlsx": "0.0.36"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
