--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "diadelatoalla",
-  "version": "1.0.0",
-  "description": "Un bot para el servidor de Discord del canal Dia de la Toalla",
+  "name": "mars-bot",
+  "version": "2.0.0",
+  "description": "Un bot para el servidor de Discord del SpaceApp Challenge organizado por The Mars Society Argentina",
   "main": "index.js",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node index.js"
   },
   "author": "Pablo Ariel Mayobre <pablo.a.mayobre@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "discord.js": "12.3.1",
     "email-validator": "2.0.4",
+    "express": "4.17.1",
     "node-fetch": "3.0.0-beta.9",
     "pg": "8.3.3",
     "pg-hstore": "2.3.3",
@@ -20,6 +21,7 @@
     "xlsx": "0.16.7"
   },
   "devDependencies": {
+    "@types/express": "4.17.8",
     "@types/node": "14.6.0",
     "@types/promise.allsettled": "1.0.3",
     "@types/sqlite3": "3.1.6",
